--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,8 @@ dependencies {
     testImplementation 'org.aeonbits.owner:owner:1.0.4'
     testImplementation 'io.rest-assured:rest-assured:4.4.0'
     testImplementation 'org.testng:testng:7.7.0'
+    testImplementation 'com.github.javafaker:javafaker:1.0.2'
+    testImplementation 'org.assertj:assertj-core:3.26.3'
 }
 
 tasks.register("testNGRun", Test.class){
