--- a/build.gradle
+++ b/build.gradle
@@ -25,4 +25,5 @@ tasks.register("testNGRun", Test.class){
     testLogging {
         events "passed", "skipped", "failed"
     }
+    environment "host", System.getProperty("host")
 }
